syntax = "proto3";

package org.inject;

option java_multiple_files = true;

service PicturesService{
  rpc GetPictures (ArtistRequest) returns (stream PictureResponse){}
  rpc GetArtist (PictureRequest) returns (ArtistResponse){}
}

message ArtistRequest{
  string artist_name = 1;
}

message PictureResponse{
  string artist_name = 1;
  string picture_name = 2;
}

message PictureRequest{
  string picture_name = 1;
}

message ArtistResponse{
  string artist_name = 1;
  repeated string pictures = 2;
}